<resources>
    <string name="app_name">VOCA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">단어 검색</string>
    <string name="list">단어 목록</string>
    <string name="add">추가</string>
    <string name="bookmark">즐겨 찾기</string>
    <string name="today_word">오늘의 단어</string>
    <string name="wordbook">WORDBOOK</string>
    <string name="sign_up">회원가입</string>
    <string name="password">Password</string>
    <string name="add_word">단어 추가</string>
    <string name="confirm">확인</string>
    <string name="word_list">단어 목록</string>
    <string name="delete_account">계정삭제</string>
    <string name="logout">LOGOUT</string>
    <string name="default_email">username@gmail.com</string>
    <string name="login_email">연결된 계정</string>
    <string name="setting_test_plan">시험일정 설정</string>
    <string name="nickname">닉네임</string>
    <string name="show_toeic_plan">토익일정 보기</string>
    <string name="email">Email</string>
    <string name="facebook_app_id">345104280300734</string> <string name="fb_login_protocol_scheme">fb345104280300734</string>
    <string name="cancel">취소</string>
</resources>